0.2.4.dev (unreleased)
======================

No changes yet.

0.2.3 (2010-04-24)
==================

- Fixed plugins svn paths [tarek]

0.1.0 (2008-06-16)
==================

- Created recipe with ZopeSkel [Tarek Ziade].