@@ -1,7 +1,8 @@
 0.2.4.dev (unreleased)
 ======================
 
-No changes yet.
+- Force upgrade of informations used during initialization: this is necessary to keep these parameters fresh if the Trac project structure already exists. [kdeldycke]
+
 
 0.2.3 (2010-04-24)
 ==================
